--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -201,7 +201,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "!pip install autogluon -U -q"
+    "!pip install -U autogluon.tabular\n"
    ]
   },
   {
@@ -230,8 +230,8 @@
    "outputs": [],
    "source": [
     "train_data_url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_procesado.csv'\n",
-    "train_data = TabularDataset(train_data_url)\n",
-    "train_data.head()"
+    "\n",
+    "train_data = TabularDataset(train_data_url)\n"
    ]
   },
   {
@@ -249,7 +249,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor = TabularPredictor(label='diabetes').fit(train_data)"
+    "label = \"diabetes\"\n",
+    "\n",
+    "predictor = TabularPredictor(label=label).fit(train_data)"
    ]
   },
   {
@@ -300,6 +302,17 @@
    ]
   },
   {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "f7a7b3ce",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "fi = predictor.feature_importance(train_data)\n",
+    "print(fi)"
+   ]
+  },
+  {
    "cell_type": "markdown",
    "id": "78c56dbb-0d99-4d34-b1ec-8e1b05b46b70",
    "metadata": {},
@@ -316,6 +329,42 @@
    "source": [
     "y_pred = predictor.predict(test_data.drop(columns=['diabetes']))\n",
     "y_pred.head()"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "7c7fbf15",
+   "metadata": {},
+   "source": [
+    "## Como especificar parametros"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "4085f53b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = TabularPredictor(label=label).fit(\n",
+    "    train_data,\n",
+    "    time_limit=600,           # 10 minutes\n",
+    "    presets=\"medium_quality\", # or \"best_quality\", \"high_quality_fast_inference_only_refit\"\n",
+    ")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "67f015e5",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictor = TabularPredictor(\n",
+    "    label=label,\n",
+    "    problem_type=\"multiclass\",    # or \"binary\", \"regression\"\n",
+    "    eval_metric=\"accuracy\",       # or \"roc_auc\", \"log_loss\", \"rmse\", ...\n",
+    ").fit(train_data)"
    ]
   },
   {
