--- a/cursos/espanol/datascience/X.0_distribuciones_de_probabilidad.ipynb
+++ b/cursos/espanol/datascience/X.0_distribuciones_de_probabilidad.ipynb
@@ -515,6 +515,20 @@
         "prob = 1 - norm.cdf(6, loc=5, scale=0.4)\n",
         "print(prob)"
       ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Curso Avanzado\n",
+        "\n",
+        "- [System Reliability and Six Sigma in R and Python](https://timothyfraser.com/sigma/index.html)"
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": []
     }
   ],
   "metadata": {
