--- a/cursos/espanol/datascience/X_Curso_de_Base_de_Datos.ipynb
+++ b/cursos/espanol/datascience/X_Curso_de_Base_de_Datos.ipynb
@@ -1,40 +1,20 @@
 {
-  "nbformat": 4,
-  "nbformat_minor": 0,
-  "metadata": {
-    "colab": {
-      "provenance": [],
-      "collapsed_sections": [
-        "bO0kYpCC2CFN",
-        "eJPGqmVV2I2h",
-        "7WE8r7cP2QJs",
-        "UCe4Nuzy77V4",
-        "qOV2hIkY6eB2",
-        "10jd5nvR6oCM",
-        "I-h1KICCOQzf"
-      ]
-    },
-    "kernelspec": {
-      "name": "python3",
-      "display_name": "Python 3"
-    },
-    "language_info": {
-      "name": "python"
-    }
-  },
   "cells": [
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "bO0kYpCC2CFN"
+      },
       "source": [
         "# Unidad 1: Introducción a las Bases de Datos\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "bO0kYpCC2CFN"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "QIRoE244LghC"
+      },
       "source": [
         "## 1. Conceptos Básicos\n",
         "- **¿Qué es una base de datos?**  \n",
@@ -49,13 +29,13 @@
         "  - **Hardware:** Los dispositivos físicos que almacenan y procesan la base de datos.\n",
         "  - **Software (SGBD):** El sistema que gestiona la base de datos.\n",
         "  - **Usuarios:** Las personas que interactúan con la base de datos."
-      ],
-      "metadata": {
-        "id": "QIRoE244LghC"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "bqYQ3plWLi1O"
+      },
       "source": [
         "\n",
         "## 2. Sistemas de Gestión de Bases de Datos (SGBD)\n",
@@ -71,13 +51,13 @@
         "  - **Control de Acceso:** Gestión de usuarios y permisos.\n",
         "  - **Seguridad:** Protección contra accesos no autorizados.\n",
         "  - **Mantenimiento:** Respaldos, recuperación y optimización.\n"
-      ],
-      "metadata": {
-        "id": "bqYQ3plWLi1O"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "6oAXdKUNKe6F"
+      },
       "source": [
         "# Practica 1:\n",
         "\n",
@@ -87,22 +67,22 @@
         "\n",
         "Ver Tendencias de los sistemas mas usados:\n",
         "- [Encuesta de StackOverflow](https://survey.stackoverflow.co/2024/)"
-      ],
-      "metadata": {
-        "id": "6oAXdKUNKe6F"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Unidad 2: Modelo de Bases de Datos Relacionales"
-      ],
       "metadata": {
         "id": "eJPGqmVV2I2h"
-      }
+      },
+      "source": [
+        "# Unidad 2: Modelo de Bases de Datos Relacionales"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "53B0tNnWLqeT"
+      },
       "source": [
         "## 1. Tablas, Filas y Columnas\n",
         "- **Tabla:** Conjunto de datos organizados en filas y columnas, que representa una entidad (por ejemplo, una tabla de \"Clientes\").\n",
@@ -113,36 +93,36 @@
         "  - **Numéricos:** Números enteros o decimales.\n",
         "  - **Texto:** Cadenas de caracteres.\n",
         "  - **Fecha y Hora:** Para almacenar fechas y tiempos específicos."
-      ],
-      "metadata": {
-        "id": "53B0tNnWLqeT"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "hbaPpEleLyIq"
+      },
       "source": [
         "## 2. Claves Primarias y Claves Foráneas\n",
         "- **Clave Primaria:** Columna (o conjunto de columnas) que identifica de manera única cada fila en una tabla. Ejemplo: \"ID Cliente\".\n",
         "- **Clave Foránea:** Columna en una tabla que hace referencia a la clave primaria de otra tabla, estableciendo una relación entre ellas."
-      ],
-      "metadata": {
-        "id": "hbaPpEleLyIq"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "3qXgVdFGL0Oi"
+      },
       "source": [
         "## 3. Relaciones en Bases de Datos\n",
         "- **Relaciones Uno a Uno:** Una fila en una tabla está vinculada a una sola fila en otra tabla.\n",
         "- **Relaciones Uno a Muchos:** Una fila en una tabla puede estar relacionada con múltiples filas en otra tabla. Ejemplo: Un cliente puede tener varios pedidos.\n",
         "- **Relaciones Muchos a Muchos:** Varias filas en una tabla están relacionadas con varias filas en otra. Para implementarla, se crea una tabla intermedia que vincule ambas tablas."
-      ],
-      "metadata": {
-        "id": "3qXgVdFGL0Oi"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "AZNUSbxKL2Si"
+      },
       "source": [
         "## 4. Normalización: Fundamentos y Objetivos\n",
         "- **Normalización:** Proceso de estructurar tablas para reducir la redundancia y mejorar la consistencia de los datos.\n",
@@ -150,22 +130,22 @@
         "  - Minimizar la duplicación de datos.\n",
         "  - Eliminar las anomalías de actualización, eliminación e inserción.\n",
         "  - Mejorar la integridad de la base de datos."
-      ],
-      "metadata": {
-        "id": "AZNUSbxKL2Si"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Unidad 3: Lenguaje SQL - Consultas\n"
-      ],
       "metadata": {
         "id": "7WE8r7cP2QJs"
-      }
+      },
+      "source": [
+        "# Unidad 3: Lenguaje SQL - Consultas\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "Nb5SEpWQMVKW"
+      },
       "source": [
         "## 1. Introducción a SQL\n",
         "- **¿Qué es SQL?**  \n",
@@ -177,13 +157,13 @@
         "  SELECT * FROM tabla;\n",
         "  ```\n",
         "  "
-      ],
-      "metadata": {
-        "id": "Nb5SEpWQMVKW"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "GELalvgcMZra"
+      },
       "source": [
         "## 2. Consultas Básicas\n",
         "\n",
@@ -208,13 +188,13 @@
         "\n",
         "**BETWEEN:** Filtra valores dentro de un rango.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "GELalvgcMZra"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "X1Dvuh15McjR"
+      },
       "source": [
         "## 3. Consultas Avanzadas en SQL\n",
         "\n",
@@ -362,13 +342,13 @@
         "  GROUP BY departamento\n",
         "  HAVING AVG(salario) > 3000;\n",
         "  ```"
-      ],
-      "metadata": {
-        "id": "X1Dvuh15McjR"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "7X1lMKmTIJGE"
+      },
       "source": [
         "### Orden de Ejecución de una Consulta `SELECT`\n",
         "El orden en el que se ejecuta una consulta `SELECT` en SQL es el siguiente:\n",
@@ -432,23 +412,23 @@
         "7. `LIMIT / OFFSET`\n",
         "\n",
         "Este orden de ejecución es clave para entender cómo optimizar y estructurar consultas SQL efectivas y evitar errores en los cálculos y filtros."
-      ],
-      "metadata": {
-        "id": "7X1lMKmTIJGE"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "UCe4Nuzy77V4"
+      },
       "source": [
         "# Unidad 4: Creacion de Bases de Datos - Formas Normales\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "UCe4Nuzy77V4"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "an4rDyvRNKIj"
+      },
       "source": [
         "### 1FN (Primera Forma Normal)\n",
         "La **Primera Forma Normal (1FN)** se enfoca en que los datos sean **atómicos** (sin valores repetidos o listas en una sola celda). Para cumplir con la 1FN:\n",
@@ -477,13 +457,13 @@
         "\n",
         "Ahora, cada columna tiene solo un valor, cumpliendo la 1FN.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "an4rDyvRNKIj"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "jwS9bjMrNM9v"
+      },
       "source": [
         "### 2FN (Segunda Forma Normal)\n",
         "La **Segunda Forma Normal (2FN)** se logra cuando:\n",
@@ -527,13 +507,13 @@
         "Ahora cada tabla depende completamente de su clave primaria, cumpliendo la 2FN.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "jwS9bjMrNM9v"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "5zbSeNW-NOq3"
+      },
       "source": [
         "### 3FN (Tercera Forma Normal)\n",
         "La **Tercera Forma Normal (3FN)** se logra cuando:\n",
@@ -573,13 +553,13 @@
         "\n",
         "Ahora cada atributo depende solo de la clave primaria, cumpliendo la 3FN.\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "5zbSeNW-NOq3"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "y1Myj6-ONQC4"
+      },
       "source": [
         "### Resumen\n",
         "- **1FN:** Evitar valores múltiples en una columna.\n",
@@ -587,31 +567,31 @@
         "- **3FN:** Eliminar dependencias transitivas (cumple la 2FN + no hay dependencias entre columnas que no son clave primaria).\n",
         "\n",
         "Estos pasos mejoran la estructura y eficiencia de la base de datos, haciendo que los datos sean más fáciles de mantener y menos propensos a errores."
-      ],
-      "metadata": {
-        "id": "y1Myj6-ONQC4"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [],
       "metadata": {
         "id": "4PzEY4UoGTBd"
-      }
+      },
+      "source": []
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "qOV2hIkY6eB2"
+      },
       "source": [
         "# Unidad 5: Lenguaje SQL - Gestión de Bases de Datos\n",
         "\n",
         "- [Visualizacion de indices en SQLite](https://mrsuh.com/articles/2024/sqlite-index-visualization-structure/)\n"
-      ],
-      "metadata": {
-        "id": "qOV2hIkY6eB2"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "OlSCXbDpM2ag"
+      },
       "source": [
         "## 1. Creación y Modificación de Tablas\n",
         "\n",
@@ -659,13 +639,13 @@
         "```\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "OlSCXbDpM2ag"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "mQ2Ouic1M5Ym"
+      },
       "source": [
         "## 2. Manipulación de Datos\n",
         "\n",
@@ -691,13 +671,13 @@
         "DELETE FROM Clientes WHERE Nombre = 'Luis';\n",
         "```\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "mQ2Ouic1M5Ym"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "pPlujMOiM7m3"
+      },
       "source": [
         "## 3. Índices\n",
         "\n",
@@ -757,24 +737,24 @@
         "- Monitorear el uso de índices\n",
         "- Mantener los índices actualizados\n",
         "- Considerar el impacto en el almacenamiento"
-      ],
-      "metadata": {
-        "id": "pPlujMOiM7m3"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "10jd5nvR6oCM"
+      },
       "source": [
         "\n",
         "# Unidad 6: Integridad y Restricciones\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "10jd5nvR6oCM"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "lDuPP4L-NClq"
+      },
       "source": [
         "## 1. Restricciones en Bases de Datos\n",
         "\n",
@@ -837,13 +817,13 @@
         ");\n",
         "```\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "lDuPP4L-NClq"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "fhX0a5DQNFXi"
+      },
       "source": [
         "## 2. Integridad de Datos\n",
         "\n",
@@ -912,22 +892,22 @@
         "* Evaluar el impacto en el rendimiento\n",
         "* Usar restricciones a nivel de base de datos en vez de aplicación\n",
         "* Mantener un balance entre flexibilidad y control"
-      ],
-      "metadata": {
-        "id": "fhX0a5DQNFXi"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
-      "source": [
-        "# Unidad 7: Bases de Datos NoSQL\n"
-      ],
       "metadata": {
         "id": "I-h1KICCOQzf"
-      }
+      },
+      "source": [
+        "# Unidad 7: Bases de Datos NoSQL\n"
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "9OBD4VDmOcbN"
+      },
       "source": [
         "### Resumen\n",
         "\n",
@@ -942,13 +922,13 @@
         "- **ChromaDB**: Especializada en búsquedas vectoriales, esencial para IA y búsqueda de similitudes.\n",
         "\n",
         "Cada una de estas bases de datos tiene un diseño específico que se adapta mejor a distintos tipos de aplicaciones y casos de uso."
-      ],
-      "metadata": {
-        "id": "9OBD4VDmOcbN"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "lOYnMlWfOjPZ"
+      },
       "source": [
         "### **MongoDB**\n",
         "- **Tipo**: Base de datos de documentos.\n",
@@ -975,13 +955,13 @@
         "    ```\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "lOYnMlWfOjPZ"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "v-0ia6t_OmRa"
+      },
       "source": [
         "### **DuckDB**\n",
         "- **Tipo**: Base de datos de procesamiento analítico en memoria.\n",
@@ -998,13 +978,13 @@
         "- **Ventaja**: Procesa grandes volúmenes de datos en memoria, lo cual lo hace rápido para tareas analíticas en sistemas locales.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "v-0ia6t_OmRa"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "OM8CSH0JOpim"
+      },
       "source": [
         "### **Redis**\n",
         "- **Tipo**: Base de datos clave-valor en memoria.\n",
@@ -1022,13 +1002,13 @@
         "- **Ventaja**: Baja latencia y alto rendimiento para operaciones de lectura y escritura rápidas.\n",
         "\n",
         "\n"
-      ],
-      "metadata": {
-        "id": "OM8CSH0JOpim"
-      }
+      ]
     },
     {
       "cell_type": "markdown",
+      "metadata": {
+        "id": "uUVHHNhWOwbr"
+      },
       "source": [
         "### **ChromaDB**\n",
         "- **Tipo**: Base de datos para búsqueda vectorial y datos embebidos.\n",
@@ -1042,10 +1022,40 @@
         "    ```\n",
         "\n",
         "- **Ventaja**: Permite realizar búsquedas rápidas de similitud, crucial en aplicaciones que usan IA y machine learning.\n"
-      ],
-      "metadata": {
-        "id": "uUVHHNhWOwbr"
-      }
+      ]
+    },
+    {
+      "cell_type": "markdown",
+      "metadata": {},
+      "source": [
+        "# Temas Avanzados\n",
+        "\n",
+        "- [Readings in Database Systems](http://www.redbook.io)\n",
+        "- [Introduction to PostgreSQL Indexes](https://dlt.github.io/blog/posts/introduction-to-postgresql-indexes/)"
+      ]
     }
-  ]
+  ],
+  "metadata": {
+    "colab": {
+      "collapsed_sections": [
+        "bO0kYpCC2CFN",
+        "eJPGqmVV2I2h",
+        "7WE8r7cP2QJs",
+        "UCe4Nuzy77V4",
+        "qOV2hIkY6eB2",
+        "10jd5nvR6oCM",
+        "I-h1KICCOQzf"
+      ],
+      "provenance": []
+    },
+    "kernelspec": {
+      "display_name": "Python 3",
+      "name": "python3"
+    },
+    "language_info": {
+      "name": "python"
+    }
+  },
+  "nbformat": 4,
+  "nbformat_minor": 0
 }
