--- a/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb
+++ b/cursos/espanol/deeplearning/llms/Making_LLMs_Smarter.ipynb
@@ -727,6 +727,16 @@
     "- [Exa docs](https://docs.exa.ai/reference/getting-started-with-python)\n",
     "- [Exa Researcher Python Colab Notebook](https://colab.research.google.com/drive/1Aj6bBptSHWxZO7GVG2RoWtQSEkpabuaF)\n"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "bfcab0d4",
+   "metadata": {},
+   "source": [
+    "## Articulos interesantes\n",
+    "- [So you wanna build a local RAG?](https://blog.yakkomajuri.com/blog/local-rag)\n",
+    "- [Structured LLM outputs](https://nanonets.com/cookbooks/structured-llm-outputs)"
+   ]
   }
  ],
  "metadata": {
