--- a/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
+++ b/cursos/espanol/deeplearning/nn_architectures/E5_Transformers_Arch.ipynb
@@ -59,8 +59,19 @@
     "Tratando de evaluar LLMs:\n",
     "- [Measuring the performance of our models on real-world tasks](https://openai.com/index/gdpval/)\n",
     "- [DSPy: Programming—not prompting—Foundation Models](https://github.com/stanfordnlp/dspy)\n",
-    "- [Defining and evaluating political bias in LLMs](https://openai.com/index/defining-and-evaluating-political-bias-in-llms/)"
+    "- [Defining and evaluating political bias in LLMs](https://openai.com/index/defining-and-evaluating-political-bias-in-llms/)\n",
+    "\n",
+    "The Q, K, V Matrices (Attention)\n",
+    "- [\"Attention\", \"Transformers\", in Neural Network \"Large Language Models\"](http://bactra.org/notebooks/nn-attention-and-transformers.html)\n",
+    "- [Attention video from U of Michigan](https://www.youtube.com/watch?v=YAgjfMR9R_M)\n",
+    "- [The Q, K, V Matrices](https://arpitbhayani.me/blogs/qkv-matrices/)"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b894a4c9",
+   "metadata": {},
+   "source": []
   },
   {
    "cell_type": "markdown",
