--- a/cursos/espanol/mlops/E_interesting_stuff.ipynb
+++ b/cursos/espanol/mlops/E_interesting_stuff.ipynb
@@ -6,6 +6,7 @@
    "source": [
     "# Cursos\n",
     "\n",
+    "- [ML System Design Case Studies Repository](https://github.com/Engineer1999/A-Curated-List-of-ML-System-Design-Case-Studies)\n",
     "- [Data Engineering Zoomcamp: A Free 9-Week Course on Data Engineering Fundamentals](https://github.com/DataTalksClub/data-engineering-zoomcamp)\n",
     "- [Snowflake Tutorial](https://github.com/suresh/snowflake-tutorial)\n",
     "- [dbt Fundamentals](https://github.com/gbourniq/dbt-fundamentals)\n",
@@ -13,6 +14,10 @@
     "- [LLM Twin Course: Building Your Production-Ready AI Replica](https://github.com/decodingml/llm-twin-course)\n",
     "\n",
     "# Articulos Interesantes\n",
+    "\n",
+    "- [I made my own git](https://tonystr.net/blog/git_immitation)\n",
+    "- [How I think about Kubernetes](https://garnaudov.com/writings/how-i-think-about-kubernetes/)\n",
+    "- [650GB of Data (Delta Lake on S3). Polars vs DuckDB vs Daft vs Spark.](https://dataengineeringcentral.substack.com/p/650gb-of-data-delta-lake-on-s3-polars)\n",
     "- [How to build production-ready ML Systems](https://theneuralmaze.substack.com/p/how-to-build-production-ready-ml)\n",
     "- [Deploying a Multimodal Agent on AWS Lambda](https://theneuralmaze.substack.com/p/deploying-a-multimodal-agent-on-aws)\n",
     "- [How we built ngrok's data platform](https://ngrok.com/blog-post/how-we-built-ngroks-data-platform)\n",
