--- a/cursos/espanol/reinforcement_learning/0_intro.ipynb
+++ b/cursos/espanol/reinforcement_learning/0_intro.ipynb
@@ -43,6 +43,7 @@
     "- [Unit 4.1: Adding Memory Replay](HomeMadeRL_4.1_Agent_DeepQLearning_MemoryReplay_v1_solution.ipynb)\n",
     "- [Unit 4.2: Converting from sklearn to pytorch](HomeMadeRL_4.2_Agent_DeepQLearning_MemoryReplay_Pytorch_v1_solution.ipynb)\n",
     "- [Unit 5: Making the Environment compatible with Gymnasium](HomeMadeRL_5_GymEnv_StableBaselines3_v1_solution.ipynb)\n",
+    "- [Learning to Play Tic-Tac-Toe with Jax](https://joe-antognini.github.io/ml/jax-tic-tac-toe)\n",
     "\n",
     "\n",
     "### Ref:\n",
@@ -69,7 +70,7 @@
     "- [Deep Mind RL Video Series 2](https://www.youtube.com/playlist?list=PLqYmG7hTraZCRwoyGxvQkqVrZgDQi4m-5)\n",
     "- [Temporal Difference Learning by Rich Sutton video series](https://videolectures.net/deeplearning2017_sutton_td_learning/)\n",
     "- [Another AI Stanford Course](https://www.youtube.com/watch?v=ZiwogMtbjr4&list=PLoROMvodv4rOca_Ovz1DvdtWuz8BfSWL2)\n",
-    "\n",
+    "- [RL103: From Deep Q-Learning (DQN) to Soft Actor-Critic (SAC) and Beyond](https://araffin.github.io/post/rl103/?trk=feed-detail_main-feed-card_feed-article-content)\n",
     "\n"
    ]
   },
