--- a/cursos/espanol/datascience/11_autogluon.ipynb
+++ b/cursos/espanol/datascience/11_autogluon.ipynb
@@ -33,8 +33,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import autogluon\n",
-    "autogluon.__version__"
+    "import autogluon"
    ]
   },
   {
@@ -274,26 +273,11 @@
    "source": [
     "## Guardar y cargar el modelo\n",
     "\n",
-    "Guardamos el modelo y luego lo cargamos nuevamente para poder usarlo sin volver a ejecutar todo el proceso."
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor.save('mi_modelo_autogluon')"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "loaded_predictor = TabularPredictor.load('mi_modelo_autogluon')\n",
-    "loaded_predictor.leaderboard(silent=True)"
+    "Los modelos se guardan automaticamente y luego podemos cargarlos utilizando la funcion load. Para guardarlos manualmente podemos utilizar la funcion save.\n",
+    "\n",
+    "```python\n",
+    "loaded_predictor = TabularPredictor.load('path a mi modelo de autogluon')\n",
+    "```"
    ]
   },
   {
