--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -229,9 +229,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "train_data_url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_procesado.csv'\n",
-    "\n",
-    "train_data = TabularDataset(train_data_url)\n"
+    "df_ana_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_analisis.csv')\n",
+    "df_inf_train = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_train_info.csv')\n",
+    "df_train = pd.merge(df_ana_train, df_inf_train, on=\"id\")\n",
+    "df_train = df_train.drop(\"id\", axis=1)\n",
+    "train_data = TabularDataset(df_train)"
    ]
   },
   {
@@ -249,9 +251,13 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "label = \"diabetes\"\n",
-    "\n",
-    "predictor = TabularPredictor(label=label).fit(train_data)"
+    "predictor = TabularPredictor(\n",
+    "    label='diabetes',\n",
+    "    eval_metric='accuracy'\n",
+    ").fit(\n",
+    "    train_data,\n",
+    "    time_limit=120\n",
+    ")"
    ]
   },
   {
@@ -269,8 +275,11 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "test_data_url = 'https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_procesado.csv'\n",
-    "test_data = TabularDataset(test_data_url)"
+    "df_ana_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_analisis.csv')\n",
+    "df_inf_test = pd.read_csv('https://raw.githubusercontent.com/amiune/freecodingtour/main/cursos/espanol/datascience/data/diabetes/diabetes_test_info.csv')\n",
+    "df_test = pd.merge(df_ana_test, df_inf_test, on=\"id\")\n",
+    "df_test = df_test.drop(\"id\", axis=1)\n",
+    "test_data = TabularDataset(df_test)"
    ]
   },
   {
@@ -288,7 +297,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "predictor.evaluate(test_data, silent=True)"
+    "predictor.evaluate(test_data)"
    ]
   },
   {
@@ -374,7 +383,38 @@
    "source": [
     "## PyCaret\n",
     "\n",
-    "PyCaret nos ofrece la posibilidad de automatizar todo el proceso desde el Analisis Exploratorio de Datos, pasando por el Machine Learning hasta el analisis y la interpretacion de los resultados por ello le dedicaremos una unidad especial que puedes ver [aqui](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/11_pycaret.ipynb)."
+    "Similar a AutoGluon pero un poco mas simple"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "e0c0ba7d",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "from pycaret.classification import *\n",
+    "s = setup(df_train, target='diabetes', session_id=42)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "87f0964f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "best = compare_models()"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "98f7db0f",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "predictions = predict_model(best, data = df_test)"
    ]
   },
   {
