--- a/cursos/espanol/datascience/8_automl.ipynb
+++ b/cursos/espanol/datascience/8_automl.ipynb
@@ -342,79 +342,12 @@
   },
   {
    "cell_type": "markdown",
-   "id": "7c7fbf15",
-   "metadata": {},
-   "source": [
-    "## Como especificar parametros"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "4085f53b",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor = TabularPredictor(label=label).fit(\n",
-    "    train_data,\n",
-    "    time_limit=600,           # 10 minutes\n",
-    "    presets=\"medium_quality\", # or \"best_quality\", \"high_quality_fast_inference_only_refit\"\n",
-    ")"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "67f015e5",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictor = TabularPredictor(\n",
-    "    label=label,\n",
-    "    problem_type=\"multiclass\",    # or \"binary\", \"regression\"\n",
-    "    eval_metric=\"accuracy\",       # or \"roc_auc\", \"log_loss\", \"rmse\", ...\n",
-    ").fit(train_data)"
-   ]
-  },
-  {
-   "cell_type": "markdown",
    "id": "3811dab3",
    "metadata": {},
    "source": [
     "## PyCaret\n",
     "\n",
-    "Similar a AutoGluon pero un poco mas simple"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "e0c0ba7d",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "from pycaret.classification import *\n",
-    "s = setup(df_train, target='diabetes', session_id=42)"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "87f0964f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "best = compare_models()"
-   ]
-  },
-  {
-   "cell_type": "code",
-   "execution_count": null,
-   "id": "98f7db0f",
-   "metadata": {},
-   "outputs": [],
-   "source": [
-    "predictions = predict_model(best, data = df_test)"
+    "Similar a AutoGluon pero un poco mas simple. Podemos ver su funcionamiento en el siguiente [link](https://colab.research.google.com/github/amiune/freecodingtour/blob/main/cursos/espanol/datascience/11_pycaret.ipynb)"
    ]
   },
   {
